remove backlinks + add all clickable
